[package]
name = "bijou-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mivik <mivikq@gmail.com>"]
description = "Bijou is a tiny yet fast encrypted file system."
readme = "README.md"
keywords = ["crypto", "fuse", "filesystem", "storage", "security"]
categories = ["cryptography", "filesystem"]
license = "MIT"

[[bin]]
name = "bijou"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
ctrlc = "3.4.1"
rpassword = "7.2.0"
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[target.'cfg(not(windows))'.dependencies]
bijou = { path = "../bijou", features = ["fuse"] }

[target.'cfg(windows)'.dependencies]
bijou = { path = "../bijou" }

[features]
opendal = ["bijou/opendal"]
