[package]
name = "bijou-cli"

authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "bijou"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
ctrlc = "3.4.1"
rpassword = "7.2.0"
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[target.'cfg(not(windows))'.dependencies]
bijou = { path = "../bijou", version = "0.0.1", features = ["fuse"] }

[target.'cfg(windows)'.dependencies]
bijou = { path = "../bijou", version = "0.0.1" }

[features]
opendal = ["bijou/opendal"]
