[package]
name = "bijou"

authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
base64 = "0.21.4"
bijou-rocksdb = "0.21.0"
chrono = { version = "0.4.30", features = ["serde"] }
dashmap = "5.5.3"
fuser = { version = "0.13.0", features = ["abi-7-21"], optional = true }
libc = "0.2.147"
libsodium-sys-stable = "1.20.2"
postcard = { version = "1.0.7", features = ["alloc"] }
rand = "0.8.5"
ring = "0.16.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
smallvec = "1.11.0"
threadpool = "1.8.1"
tracing = "0.1.37"

[dependencies.opendal]
version = "0.39.0"
default-features = false
features = ["services-memory"]
optional = true

[features]
opendal = ["dep:opendal"]
fuse = ["dep:fuser"]
